# cli_chatapp_cpp

./: .gitignore  CMakeLists.txt  make.sh  pass.env
backend/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  common.h  database.cpp  handle_client.cpp  read_env.cpp
common/database/: database.cpp  database.h
frontend/: .env  CMakeLists.txt  main.cpp
utils/: dynamic_read.cpp  handle_client.cpp  handle_login.cpp  threads.cpp  utils.hpp
